# TextSummarizer

./: .gitignore  CMakeLists.txt  README.md
example_files/: 1.txt  2.txt  3.txt
include/: summarizer.hpp  tokenizer.hpp
protos/: CMakeLists.txt  tokenize.proto
py_src/: EEP590_Final_Project.ipynb  token_client.py  token_server.py  tokenize_pb2.py  tokenize_pb2.pyi  tokenize_pb2_grpc.py
src/: main.cpp  summarizer.cpp  tokenizer.cpp
